Add db for users, add method to create operator